--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "「离开世界之前 一切都是过程」"
+description: "「进入网页之前 开户官网地址 www.xbs0623.vip TG@Newbsvip1127」"
 ---
 
 {% for post in paginator.posts %}
